# demo-ollama

./: .gitignore  README.md  demo1.ipynb  demo2.ipynb  pyproject.toml
demo_ollama/: __init__.py
