[project]
name = "demo-ollama"
version = "0.1.0"
description = "Demo project with Ollama"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv",
    "jupyterlab",
    "ipywidgets",
    "requests",
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "gensim",
    "torch",
    "transformers",
    "tqdm",
    "openai",
    "gradio",
    "langchain",
    "langchain-core",
    "langchain-text-splitters",
    "langchain-openai",
    "langchain-chroma",
    "langchain-community",
    "datasets==3.6.0",
    "google-generativeai",
    "anthropic",
    "chromadb",
    "plotly",
    "jupyter-dash",
    "beautifulsoup4",
    "pydub",
    "modal",
    "ollama",
    "psutil",
    "setuptools",
    "speedtest-cli",
    "sentence_transformers",
    "feedparser",
    "protobuf==3.20.2",
    "wandb",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

